# libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c  main.h  perso.h  teset.cpp
include/: .libft.h.un~  .size.h.un~  ft_atoi.h  ft_base.h  ft_bool.h  ft_dinamyctree.h  ft_diplaychar.h  ft_functionpointer.h  ft_is.h  ft_isspace.h  ft_list.h  ft_putchar.h  ft_putnbr.h  ft_putstr.h  ft_puttab.h  ft_split.h  ft_string.h  ft_string.h.h  ft_tobinary.h  libft.h  libft.h~  size.h
srcs/: .ft_tobinary.c.un~  ft_atoi.c  ft_base.c  ft_dinamyctree.c  ft_diplaychar.c  ft_filereader.c  ft_filereader.h  ft_functionpointer.c  ft_is.c  ft_isspace.c  ft_list.c  ft_putchar.c  ft_putnbr.c  ft_putstr.c  ft_puttab.c  ft_size.c  ft_split.c  ft_string.c  ft_string.h.c  ft_tobinary.c  ft_tobinary.c~  size.c
